resolved grey strip issue in slider. removed section class from slider div. removed img css from css file and added height and scroll indicator properties in js file. Made photo gallery presentable by changing it to m6, that is two images on tablets per row. It is looking super neat now and fully tweaked front end of the site. Web content and active class feature will be added in future

--- a/CSS/materialize.css
+++ b/CSS/materialize.css
@@ -2,10 +2,6 @@
     padding: 50px;
 }
 
-.slides img{
-    height: 100%;
-}
-
 .fa-facebook{
     color:  #3b5998;
 }
